objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Building__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Building</label>
        <referenceTo>Building__c</referenceTo>
        <relationshipLabel>Campaigns</relationshipLabel>
        <relationshipName>Campaigns</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Pass_Campaign_Assignment__c</fullName>
        <formula>IF((BEGINS(Lead_Owner__c, "005") || BEGINS(Lead_Owner__c,"00G")),false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>By Pass Campaign Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Audience__c</fullName>
        <description>This is a dependent picklist based on the campaign target. According to the selection of the Target we have defined values for Audience</description>
        <inlineHelpText>Select the audience for the campaign</inlineHelpText>
        <label>Campaign Audience</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Campaign_Target__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>CEO</fullName>
                </value>
                <value>
                    <fullName>COO</fullName>
                </value>
                <value>
                    <fullName>Lawyers</fullName>
                </value>
                <value>
                    <fullName>Recruitment</fullName>
                </value>
                <value>
                    <fullName>Services</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Auto_Number__c</fullName>
        <displayFormat>CAMP-{000000}</displayFormat>
        <label>Campaign Auto Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Campaign_Cadence__c</fullName>
        <description>This fields captures the information about the campaign cadence. How many emails will the campaign member will receive if they are part of the event.</description>
        <inlineHelpText>This fields captures the information about the campaign cadence</inlineHelpText>
        <label>Campaign Cadence</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1 Touch</fullName>
                </value>
                <value>
                    <fullName>2 Touch</fullName>
                </value>
                <value>
                    <fullName>3 Touch</fullName>
                </value>
                <value>
                    <fullName>4 Touch</fullName>
                </value>
                <value>
                    <fullName>5 Touch</fullName>
                </value>
                <value>
                    <fullName>6 Touch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Campaign_Target__c</fullName>
        <description>This field stores the information about the target, on which the specific campaign is focused.</description>
        <inlineHelpText>Select the target for the campaign.</inlineHelpText>
        <label>Campaign Target</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Industry</fullName>
                </value>
                <value>
                    <fullName>Persona</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Create_Event_Type__c</fullName>
        <label>Create Event Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Influencer Event</fullName>
                </value>
                <value>
                    <fullName>Launch Event</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Default_Parent_Campaign__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Default Parent Campaign</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <description>Email Address From Splash</description>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sendout_End_Date__c</fullName>
        <description>This is end date for email send</description>
        <label>Email Sendout End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Sendout_Start_Date__c</fullName>
        <description>This is start date to for email send</description>
        <label>Email Sendout Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Event_Advertised_on__c</fullName>
        <label>Event Advertised On</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Facebook</fullName>
                </value>
                <value>
                    <fullName>Twitter</fullName>
                </value>
                <value>
                    <fullName>Newsletter</fullName>
                </value>
                <value>
                    <fullName>Email Blast</fullName>
                </value>
                <value>
                    <fullName>Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event_Email_Opt_Out__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please check if this event should not receive automated email cadences from Marketing Cloud</description>
        <label>Event Email Opt Out</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Event_Start_Time__c</fullName>
        <label>Event Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Event_Type__c</fullName>
        <label>Event_Type</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_on_WeWork_Premises__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Event on WeWork Premises?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Owner__c</fullName>
        <description>This field is used to route leads assigned to a campaign</description>
        <inlineHelpText>This field is used to route leads assigned to a campaign. Enter the user or queue ID.
See link below for regional queue list 
https://docs.google.com/spreadsheets/d/16_uqpniUGsFaqVEzxppQPy5MsaXho9xGaaiTDxW7Gw0/edit?usp=sharing</inlineHelpText>
        <label>Lead Owner</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <description>This field captures the naming the naming convention of Campaign.</description>
        <label>Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Attendees__c</fullName>
        <label>Number of Attendees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Opportunity Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Program__c</fullName>
        <label>Program</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>China</fullName>
                </value>
                <value>
                    <fullName>EMEA</fullName>
                </value>
                <value>
                    <fullName>India</fullName>
                </value>
                <value>
                    <fullName>Japan</fullName>
                </value>
                <value>
                    <fullName>LatAm</fullName>
                </value>
                <value>
                    <fullName>NA-East</fullName>
                </value>
                <value>
                    <fullName>NA-West</fullName>
                </value>
                <value>
                    <fullName>Pacific</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Segment__c</fullName>
        <description>Small Business: 1- 10 Full-Time Employees 
Medium Business: 11 - 250 Full-Time Employees 
Large Business: 251 - 999 Full-Time Employees
Enterprise: 1k+ Full-Time Employees 
Broker</description>
        <inlineHelpText>Small Business: 1- 10 Full-Time Employees 
Medium Business: 11 - 250 Full-Time Employees 
Large Business: 251 - 999 Full-Time Employees
Enterprise: 1k+ Full-Time Employees 
Broker</inlineHelpText>
        <label>Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Small Business</fullName>
                </value>
                <value>
                    <fullName>Medium Business</fullName>
                </value>
                <value>
                    <fullName>Large Business</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
                <value>
                    <fullName>Broker</fullName>
                </value>
                <value>
                    <fullName>Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Splash__c</fullName>
        <label>Event Detail</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Brokers</fullName>
                </value>
                <value>
                    <fullName>Creator Awards</fullName>
                </value>
                <value>
                    <fullName>Event Series</fullName>
                </value>
                <value>
                    <fullName>External - Conference</fullName>
                </value>
                <value>
                    <fullName>Field Activation</fullName>
                </value>
                <value>
                    <fullName>Happy Hour / Networking</fullName>
                </value>
                <value>
                    <fullName>Influencer Event</fullName>
                </value>
                <value>
                    <fullName>Lunch &amp; Learn</fullName>
                </value>
                <value>
                    <fullName>Marketing Events - Other</fullName>
                </value>
                <value>
                    <fullName>Meal - Breakfast, Lunch, Dinner</fullName>
                </value>
                <value>
                    <fullName>New City - Launch Party</fullName>
                </value>
                <value>
                    <fullName>New Location - Opening Party</fullName>
                </value>
                <value>
                    <fullName>Other - Community Events</fullName>
                </value>
                <value>
                    <fullName>Other - External Events</fullName>
                </value>
                <value>
                    <fullName>Other - Internal Events</fullName>
                </value>
                <value>
                    <fullName>Other - Strategic HQ Events</fullName>
                </value>
                <value>
                    <fullName>Panel Discussion / Session</fullName>
                </value>
                <value>
                    <fullName>Partnership</fullName>
                </value>
                <value>
                    <fullName>Workshop</fullName>
                </value>
                <value>
                    <fullName>TGIM</fullName>
                </value>
                <value>
                    <fullName>Wellness</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Target_Industry__c</fullName>
        <description>The above field contains the multi-picklist values of industries.</description>
        <inlineHelpText>The above field contains the multi-picklist values of industries.</inlineHelpText>
        <label>Target Industry</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Services</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>Film/Video Production &amp; Services</fullName>
                </value>
                <value>
                    <fullName>Human Resources &amp; Staffing</fullName>
                </value>
                <value>
                    <fullName>Advertising &amp; Marketing</fullName>
                </value>
                <value>
                    <fullName>Electronics</fullName>
                </value>
                <value>
                    <fullName>Consumer Services</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>Insurance</fullName>
                </value>
                <value>
                    <fullName>Management Consulting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Membership__c</fullName>
        <description>The above field contains the picklist values of Target Membership - Existing, Prospect, Former</description>
        <inlineHelpText>The above field contains the picklist values of Target Membership</inlineHelpText>
        <label>Target Membership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Existing</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Region__c</fullName>
        <description>The above field contains the picklist values of Target Region</description>
        <inlineHelpText>The above field contains the picklist values of Target Region</inlineHelpText>
        <label>Target Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amsterdam</fullName>
                </value>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Austin</fullName>
                </value>
                <value>
                    <fullName>Be'er Sheva</fullName>
                </value>
                <value>
                    <fullName>Beijing</fullName>
                </value>
                <value>
                    <fullName>Bengaluru</fullName>
                </value>
                <value>
                    <fullName>Berkeley</fullName>
                </value>
                <value>
                    <fullName>Berlin</fullName>
                </value>
                <value>
                    <fullName>Bogota</fullName>
                </value>
                <value>
                    <fullName>Boston</fullName>
                </value>
                <value>
                    <fullName>Buenos Aires</fullName>
                </value>
                <value>
                    <fullName>Capital Federal</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Detroit</fullName>
                </value>
                <value>
                    <fullName>Fort Worth</fullName>
                </value>
                <value>
                    <fullName>Frankfurt</fullName>
                </value>
                <value>
                    <fullName>Herzliya</fullName>
                </value>
                <value>
                    <fullName>Hong Kong</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Kansas City</fullName>
                </value>
                <value>
                    <fullName>London</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Madrid</fullName>
                </value>
                <value>
                    <fullName>Mexico City</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Montreal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Segment__c</fullName>
        <description>The above field contains the Segment type.</description>
        <label>Target Segment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>MidMarket</fullName>
                </value>
                <value>
                    <fullName>Enterprise</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>broker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Delivered_Emails__c</fullName>
        <description>Captures the count of emails that are delivered successful out of the total that are sent out for the campaign</description>
        <inlineHelpText>Captures the count of emails that are delivered successful out of the total that are sent out for the campaign</inlineHelpText>
        <label>Total Delivered Emails</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Desk_Booked__c</fullName>
        <label>Total Desk Booked</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Email_Sent_Out__c</fullName>
        <description>Captures the count of emails that are sent out from Marketing Cloud for the campaign</description>
        <inlineHelpText>Captures the count of emails that are sent out from Marketing Cloud for the campaign</inlineHelpText>
        <label>Total Email Sent Out</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Emails_Clicked__c</fullName>
        <description>Captures the Click Through Rate for the emails sent out.</description>
        <inlineHelpText>Captures the Click Through Rate for the emails sent out.</inlineHelpText>
        <label>Total Emails Clicked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Emails_Opened__c</fullName>
        <description>Captures the count of emails that are opened at the prospect end</description>
        <inlineHelpText>Captures the count of emails that are opened at the prospect end</inlineHelpText>
        <label>Total Emails Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Unsubscribe_Count__c</fullName>
        <description>Captures the count of emails on which user opts for unsubscription</description>
        <inlineHelpText>Captures the count of emails on which user opts for unsubscription</inlineHelpText>
        <label>Total Unsubscribe Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tour_Count__c</fullName>
        <label>Tour Count</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Method__c</fullName>
        <label>Tracking Method</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Guest Sign In</fullName>
                </value>
                <value>
                    <fullName>Headcount</fullName>
                </value>
                <value>
                    <fullName>Business Cards Collected</fullName>
                </value>
                <value>
                    <fullName>RSVP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeanData__Back_Dated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Back-Dated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Attribution__c</fullName>
        <label>LD LT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Bookings_Attribution__c</fullName>
        <label>LD LT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Attribution__c</fullName>
        <label>LD LT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_LT_Generated_Bookings_Attribution__c</fullName>
        <label>LD LT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Attribution__c</fullName>
        <label>LD MT Accelerated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Accelerated_Bookings_Attr__c</fullName>
        <label>LD MT Accelerated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Attribution__c</fullName>
        <label>LD MT Generated Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Rep_MT_Generated_Bookings_Attribution__c</fullName>
        <label>LD MT Generated Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Average_Days_To_Close__c</fullName>
        <label>Reporting Average Days to Close</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Bookings_Attribution__c</fullName>
        <label>LD MT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Campaign_Member_Totals__c</fullName>
        <label>Reporting CM Totals (Deprecated)</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Cost__c</fullName>
        <label>Reporting Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Attribution_Amount__c</fullName>
        <label>LD FT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_FT_Bookings_Attribution__c</fullName>
        <label>LD FT Bookings Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Lift__c</fullName>
        <label>Reporting Lift</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_MT_Attribution_Amount__c</fullName>
        <label>LD MT Attribution</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Num_Target_Campaign_Members__c</fullName>
        <label>Reporting Num Target CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Campaign_Members__c</fullName>
        <label>Reporting Num CM (Deprecated)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Opportunities__c</fullName>
        <label>Reporting Number of Opportunities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Number_Of_Touches__c</fullName>
        <label>Reporting Number of Touches</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_On_Target__c</fullName>
        <label>Reporting On-Target (Deprecated)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LeanData__Reporting_Opportunity_Close_Rate__c</fullName>
        <label>Reporting Opportunity Close Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>pi__Pardot_Campaign_Id__c</fullName>
        <description>The Pardot identifier for the connected campaign record</description>
        <externalId>true</externalId>
        <label>Pardot Campaign Id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>pi__Pardot_Has_Dependencies__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if Pardot has marketing assets using this campaign</description>
        <label>Pardot Has Dependencies</label>
        <type>Checkbox</type>
    </fields>
    <sharingModel>Read</sharingModel>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>Event</value>
        </filters>
        <label>Today's Campaigns</label>
        <sharedTo>
            <role>Admin</role>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>External_Newsletter_List_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.NUM_LEADS</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.NUM_CONTACTS</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>contains</operation>
            <value>External Newsletter List:</value>
        </filters>
        <label>External Newsletter List Campaigns</label>
        <sharedTo>
            <role>Admin</role>
            <role>Marketing_Manager</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <label>My Campaigns</label>
    </listViews>
</CustomObject>